--- a/view/login_page.ejs
+++ b/view/login_page.ejs
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
   <title>login page</title>
-  <link href="./login_page.css" rel="stylesheet" />
+  <link href="./login_page.css" rel="/css/login_page.css" />
 </head>
 <body>
   <div class="app">
