--- a/view/welcome.ejs
+++ b/view/welcome.ejs
@@ -6,7 +6,7 @@
   <title><%= title || 'HealthyPal' %></title>
 
   <!-- 引用你已有的样式文件：根据你的文件名修改路径 -->
-  <link rel="stylesheet" href="<%= cssHref || '/css/login.css' %>">
+  <link rel="stylesheet" href="<%= cssHref || '/css/welcome.css' %>">
 </head>
 <body>
   <main class="wrap">
@@ -38,6 +38,6 @@
   </main>
 
   <!-- 引用你已有的脚本文件：根据你的文件名修改路径 -->
-  <script src="<%= jsSrc || '/js/login.js' %>"></script>
+  <script src="<%= jsSrc || '/js/welcome.js' %>"></script>
 </body>
 </html>
