Update and rename login_page.ejs to login.ejs

--- a/view/login.ejs
+++ b/view/login.ejs
@@ -6,7 +6,7 @@
   <title><%= title || 'login page' %></title>
 
   <!-- 使用你已有的 CSS；如文件名不同，通过渲染参数传入 cssHref 或直接改成你的路径 -->
-  <link rel="stylesheet" href="<%= cssHref || '/css/login_page.css' %>">
+  <link rel="stylesheet" href="<%= cssHref || '/css/login.css' %>">
 </head>
 <body>
   <main class="login-page container">
@@ -44,6 +44,6 @@
   </main>
 
   <!-- 你的 JS，如没有可不传 -->
- <script src="<%= jsSrc || '/js/login_page.js' %>"></script>
+ <script src="<%= jsSrc || '/js/login.js' %>"></script>
 </body>
 </html>
