--- a/view/welcome.ejs
+++ b/view/welcome.ejs
@@ -50,6 +50,6 @@
       </section>
     </main>
   </div>
-<script src="js/welcome.js"></script>
+<script src="/js/welcome.js"></script>
 </body>
 </html>
