--- a/view/login.ejs
+++ b/view/login.ejs
@@ -53,6 +53,6 @@
       </section>
     </main>
   </div>
-<script src="/login.js"></script>
+<script src="/js/login.js"></script>
 </body>
 </html>
