--- a/view/welcome.ejs
+++ b/view/welcome.ejs
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
   <link href="/css/welcome.css" rel="stylesheet" />
-  <title>app</title>
+  <title>Welcome to HealthyPal</title>
 </head>
 <body>
   <div class="wrap">
