--- a/view/login.ejs
+++ b/view/login.ejs
@@ -33,7 +33,7 @@
             <input class="input" id="password" name="password" type="password" placeholder="" autocomplete="current-password" required>
           </div>
 
-          <button class="btn btn-primary" id="loginBtn">Login</button>
+          <button class="btn btn-primary" id="loginBtn" onclick="location.href='/main'">Login</button>
 
           <div class="divider">OR</div>
 
