--- a/view/login.ejs
+++ b/view/login.ejs
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
   <title>login page</title>
-  <link href="/login.css" rel="stylesheet" />
+  <link href="css/login.css" rel="stylesheet" />
 </head>
 <body>
   <div class="app">
