--- a/view/main.ejs
+++ b/view/main.ejs
@@ -27,7 +27,7 @@
         <span>Body Info</span>
       </a>
     </nav>
-    <a href="/" class="logout">
+    <a href="/logout" class="logout">
       <i class="fa-solid fa-right-from-bracket"></i> <!-- 登出图标（退出箭头） -->
       <span>Logout</span>
     </a>
