--- a/view/bodyInfo.ejs
+++ b/view/bodyInfo.ejs
@@ -97,7 +97,7 @@
 
         <div class="actions full">
           <button type="button" class="btn btn-secondary" onclick="history.back()">Back</button>
-          <button type="submit" class="btn btn-primary">Submit</button>
+          <button type="update" class="btn btn-primary">Update</button>
         </div>
       </form>
     </section>
