--- a/view/newPost.ejs
+++ b/view/newPost.ejs
@@ -103,7 +103,7 @@
 <body>
   <!-- Left sidebar -->
   <aside class="sidebar">
-    <h2>HealthyPal</h2>
+    <h2>Share new post</h2>
     <nav>
       <a href="/main">
         <i class="fa-solid fa-house"></i>
